add property image management features and update UI components

--- a/apps/rent-frontend/src/app/app.module.scss
+++ b/apps/rent-frontend/src/app/app.module.scss
@@ -1,6 +1,6 @@
 .header {
   align-items: center;
-  background-color: #668616;
+  background-color: rgb(46 139 87 / 87%);
   display: flex;
   height: 60px;
   padding: 0 20px;
